# mrdanga-player

./: CMakeLists.txt
frontends/: CMakeLists.txt
frontends/blackberry/: CMakeLists.txt  bar-descriptor.xml  deploy-to-blackberry.py  main.cpp  mrdangaplayer.qrc
frontends/blackberry/assets/: main.qml
frontends/blackberry/cmake/: FindBBMultimedia.cmake
